# AbyssForge-

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: run_microbench.py
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  user_manual.md
docs/api/: scripting_api.md
docs/guides/: design_overview.md  extensibility.md  performance.md  roadmap.md
include/abyssforge/core/: PhysicsEngine.h  PlanetGenerator.h  PlanetMetadata.h  Simulation.h
include/abyssforge/plugin/: Plugin.h  PluginRegistry.h
plugins/example_destruction/: CMakeLists.txt  ExampleDestructionPlugin.cpp
releases/alpha-0.1/windows/: BUILD_FROM_SOURCE.md  manifest.json
scenarios/: demo_earthlike.json
scripts/: auto_compile.ps1  auto_compile.sh  build_all.ps1  build_all.sh  ci_build.py  export_metadata.py  package_plugin.py  package_release.py
src/: CMakeLists.txt
src/app/: main.cpp
src/core/: PhysicsEngine.cpp  PlanetGenerator.cpp  PlanetMetadata.cpp  Simulation.cpp
src/plugin/: PluginRegistry.cpp
tests/: CMakeLists.txt  test_planet_generation.cpp
